# ConsumptionCLI

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
consumption-backend/: Consumables.py  Creators.py  Database.py  DatabaseEntity.py  settings.json
docs/: classes.drawio
src/consumption/consumption_backend/: Consumable.py  Consumables.py  Creators.py  Database.py  PathHandling.py  Staff.py  __init__.py  path_handling.py
src/consumption/consumption_cli/: CLIHandling.py  Consumables.py  SubdictAction.py  __main__.py  consumable_funcs.py  creator_funcs.py  parsers.py
src/consumptioncli/: CLIHandling.py  SubNamespaceAction.py  SubdictAction.py  __main__.py  cli_handling.py  curses_handling.py  details_handling.py  list_actions.py  list_handling.py  parsers.py  utils.py
tests/: ConsumablesTest.py  DatabaseTests.py  StaffTest.py
tests/consumption_backend_tests/: ConsumablesTest.py  CreatorsTest.py
