[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consumptioncli"
version = "2.1.1"
authors = [
  { name="track-44", email="trackfortyfour@proton.me" },
]
description = "A CLI tool for tracking consumption of media including Novels, Movies, TV Series and more."
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
  "tabulate>=0.9.0",
  "consumptionbackend==2.1.*",
  "windows-curses>=2.3.2; platform_system == 'Windows'",
]

[project.urls]
"Homepage" = "https://github.com/track-44/consumption"
"Bug Tracker" = "https://github.com/track-44/consumption/issues"

[project.scripts]
cons = "consumptioncli.__main__:main"